--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,15 +13,14 @@ jobs:
     steps:
       - checkout
 
-      # Install CocoaPods
       - run:
-          name: Install CocoaPods
-          command: pod install
+          name: Install Dependencies
+          command: bundle install
 
       # Build the app and run tests
       - run:
           name: Build and run tests
-          command: fastlane master_updated
+          command: bundle exec fastlane master_updated
 
       # Collect XML test results data to show in the UI,
       # and save the same XML files under test-results folder
