--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,8 @@ jobs:
       xcode: "10.1.0"
 
     steps:
+      - run: open /Applications/Xcode.app/Contents/Developer/Applications/Simulator.app/
+      
       - checkout
 
       - restore_cache:
